# stamboom

./: .gitignore  CLAUDE.md  LICENSE  README.md  database.py  maak_voorbeeld_data.py  main.py  models.py  pyproject.toml  schemas.py  voorbeeld.db
alembic/: env.py
alembic/versions/: bc861d13f737_initial.py
routers/: gedcom.py  personen.py  relaties.py
services/: gedcom_service.py
templates/: base.html  gedcom.html  index.html  personen_lijst.html  persoon_detail.html  persoon_form.html  persoon_verwijderen.html  relatie_detail.html  relatie_form.html  relaties_lijst.html  stamboom.html
